# ConcaveIoU

./: .clang-format  .gitignore  CMakeLists.txt
data/: 01.txt  02.txt  03.txt  04.txt
include/: concave_iou_cuda_kernel.cuh  concavehull.hpp  convex_iou_cuda_kernel.cuh  cuda_gtest_plugin.h  delaunator.hpp
src/: concave_test.cu  convex_test.cu  example_test.cu
